# ManimGL-MathJax

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  jtex_mobject.py  setup.cfg  test.py
.github/workflows/: publish.yml
manimgl_mathjax/: __init__.py  index.js  installer.py  mathjax.py  package.json  tex2svg.js
