[metadata]
name = manimgl-mathjax
version = 0.1.1
author = Manim Kindergarten Team
description = A plugin for ManimGL with tex2svg renderer using mathjax
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/manim-kindergarten/ManimGL-MathJax
project_urls =
    Bug Tracker = https://github.com/manim-kindergarten/ManimGL-MathJax/issues
    Source Code = https://github.com/manim-kindergarten/ManimGL-MathJax/
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Graphics
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript

[options]
packages = find:
include_package_data = True
install_requires = manimgl>=1.5.0

[options.entry_points]
console_scripts = 
    manimgl-mathjax = manimgl_mathjax.installer:main